--- a/source/styles/components/education/education.css
+++ b/source/styles/components/education/education.css
@@ -1,10 +1,15 @@
 .education {
 	padding: 25px 19px;
+	text-align: left;
+}
+
+.education__inner {
 	display: flex;
 	flex-direction: column;
 	gap: 12px;
 	text-align: left;
 	align-items: center;
+	padding-top: 50px;
 }
 
 .education__card {
@@ -60,6 +65,7 @@
 
 .card__top {
 	margin-bottom: 15px;
+
 }
 
 .education__wrap {
@@ -80,10 +86,59 @@
 
 .education__button-wrap {
 	position: absolute;
-	bottom: 27%;
-	left: 10%;
+	bottom: 35%;
+	left: 7%;
+	font-size: 10px;
 }
 
+.education__link {
+	border: 1px solid #FFFFFF;
+	border-radius: 50px;
+	padding: 9px 42px 6px 25px;
+	position: relative;
+	margin: 50px 0;
+}
+
+.education__link::before {
+	content: " ";
+	background-position: center center;
+	background-repeat: no-repeat;
+	height: 6px;
+	border-radius: 50%;
+	position: absolute;
+	width: 9px;
+	top: 54%;
+	right: 28px;
+	background-image: url('../images/footer/arrow.svg');
+}
+
+.education__nav {
+	display: flex;
+	max-width: 229px;
+	width: 100%;
+}
+
+.education__menu {
+	display: flex;
+	margin: 0 30px;
+	gap: 20px;
+	font-family: 'NeueMachina';
+}
+
+.education__nav-link {
+	width: 39px;
+	height: 39px;
+	border-radius: 50%;
+
+	text-align: center;
+	padding-top: 10px;
+}
+
+.education__nav-link_focus_active {
+
+	background-color: rgba(49, 52, 76, 1);
+
+}
 
 
 @media (min-width: 1220px) {
@@ -100,6 +155,10 @@
 		max-width: 430px;
 		height: 259px;
 		position: static;
+	}
+
+	.education__title {
+		font-size: 30px;
 	}
 
 	.education__button-wrap {
