--- a/source/styles/index.css
+++ b/source/styles/index.css
@@ -26,4 +26,5 @@
 @import "components/discus/discus.css";
 @import "components/interesting/interesting.css";
 @import "components/education/education.css";
+@import "components/education-2/education-2.css";
 @import "components/footer/footer.css";
