--- a/source/styles/components/education-2/education-2.css
+++ b/source/styles/components/education-2/education-2.css
@@ -28,8 +28,8 @@
 	background-image: url('../images/education-2/bnb-mob.png');
 }
 
-.education-2__img_meanbnb {
-	background-image: url('../images/education-2/bnbmean.png');
+.education-2__img_mean {
+	background-image: url('../images/education-2/mean-mob.png');
 }
 
 .education-2__img_bitok {
@@ -50,6 +50,10 @@
 	text-align: center;
 }
 
+.education-2__column {
+	margin-bottom: 30px;
+}
+
 .education-2__button-wrap--top {
 	bottom: 41%;
 	left: 7%;
@@ -58,7 +62,7 @@
 
 @media (min-width: 1220px) {
 	.education-2__card {
-		padding: 51px 30px;
+		padding: 105px 30px 70px;
 		min-height: 320px;
 	}
 
@@ -70,15 +74,45 @@
 	}
 
 	.education-2__top {
-		bottom: 70%;
+		bottom: 71%;
 		left: 3%;
+	}
+
+	.education-2__img_binance {
+		position: absolute;
+		background-image: url('../images/education-2/binance.png');
+		max-width: 350px;
+		bottom: 15%;
+		left: 50%;
+		transform: translateX(-50%);
+	}
+
+	.education-2__img_mean {
+		background-image: url('../images/education-2/mean-binance.png');
+	}
+
+	.education-2__img_bitok {
+		height: inherit;
+	}
+
+	.education-2__button-wrap--top {
+		position: absolute;
+		bottom: 5%;
+		left: 3%;
+		font-size: 14px;
+	}
+
+	.education-2__button-wrap--bottom {
+		position: absolute;
+		left: 50%;
+		bottom: 10%;
 	}
 
 	.education__inner {
 		display: grid;
-		grid-template-columns: repeat(3, 1fr);
-		grid-template-rows: repeat(3, 1fr);
+	
 		gap: 35px;
+
 	}
 
 	.div1 {
@@ -89,12 +123,13 @@
 	.div2 {
 		grid-area: 1 / 3 / 3 / 4;
 		height: 670px;
-
+		padding-top: 40px;
 	}
 
 	.div3 {
 		grid-area: 2 / 1 / 4 / 2;
-		height: 670px;
+		height: 568px;
+		padding-top: 40px;
 	}
 
 	.div4 {
@@ -103,6 +138,7 @@
 
 	.div5 {
 		grid-area: 3 / 2 / 4 / 4;
+		min-height: 218px;
 	}
 
 
