--- a/source/styles/components/education/education.css
+++ b/source/styles/components/education/education.css
@@ -65,7 +65,6 @@
 
 .card__top {
 	margin-bottom: 15px;
-
 }
 
 .education__wrap {
@@ -82,13 +81,16 @@
 	line-height: 1;
 	font-family: 'NeueMachina';
 	margin-bottom: 15px;
+	max-width: 325px;
+	margin: 0 auto;
+	font-size: 20px;
 }
 
 .education__button-wrap {
 	position: absolute;
 	bottom: 41%;
 	left: 4%;
-		font-size: 10px;
+	font-size: 10px;
 }
 
 .education__link {
@@ -113,14 +115,14 @@
 }
 
 .education__nav {
-display: flex;
-max-width: 229px;
-width: 100%;
+	display: flex;
+	max-width: 229px;
+	width: 100%;
 }
 
 .education__menu {
 	display: flex;
-margin: 0 30px;
+	margin: 0 30px;
 	gap: 20px;
 	font-family: 'NeueMachina';
 }
@@ -159,6 +161,11 @@ margin: 0 30px;
 
 	.education__title {
 		font-size: 30px;
+
+			margin-bottom: 15px;
+			max-width: 1290px;
+
+			font-size: 20px;
 	}
 
 	.education__button-wrap {
