--- a/source/styles/base/fonts.css
+++ b/source/styles/base/fonts.css
@@ -48,7 +48,7 @@
 	font-display: swap;
 }
 
-/* @font-face {
+@font-face {
 	font-family: 'Inter';
 	font-weight: 400;
 	font-style: normal;
@@ -56,7 +56,7 @@
 		url('../fonts/Inter-Regular.woff2') format('woff2'),
 		url('../fonts/Inter-Regular.woff') format('woff');
 	font-display: swap;
-} */
+}
 
 @font-face {
 	font-family: 'NeueMachina';
