--- a/source/styles/index.css
+++ b/source/styles/index.css
@@ -21,8 +21,7 @@
 @import "components/title.css";
 @import "components/filter.css";
 
-
-
+@import "components/header/header.css";
 @import "components/auth/auth.css";
 @import "components/content/content.css";
 @import "components/discus/discus.css";
