--- a/source/styles/components/content/content.css
+++ b/source/styles/components/content/content.css
@@ -58,6 +58,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 12px;
+	padding: 25px 0;
 }
 
 .content__button-wrap {
@@ -100,6 +101,10 @@
 
 .content__menu {
 	display: none;
+}
+
+.content__menu--active {
+	display: block;
 }
 
 .content__link {
@@ -147,6 +152,10 @@
 }
 
 @media (min-width: 1220px) {
+
+	.content__menu {
+		display: none;
+	}
 
 	.container {
 		position: relative;
