--- a/source/styles/components/header/header.css
+++ b/source/styles/components/header/header.css
@@ -9,10 +9,23 @@
 }
 
 
+
+.header__themes--noactive {
+	display: none;
+}
+
 .header__menu-wrap {
 	max-width: 350px;
 	margin: 0 auto;
+	margin-bottom: 210px;
 }
+
+.header__user-wrap {
+	font-family: 'NeueMachina';
+	font-size: 16px;
+	margin-bottom: 30px;
+}
+
 
 .header__menu-top {
 	display: flex;
@@ -42,6 +55,10 @@
 	background-image: url('../images/footer/arrow.svg');
 }
 
+.header__button-nav.rotate::after {
+	transform: rotate(0deg);
+}
+
 .header__themes {
 	display: flex;
 	flex-wrap: wrap;
@@ -63,6 +80,7 @@
 	text-align: left;
 	padding-left: 14px;
 	font-family: 'NeueMachina';
+	margin-bottom: 400px;
 }
 
 .header__item:not(:last-child) {
@@ -94,17 +112,95 @@
 	max-width: 48px;
 }
 
+.user-nav__wrap {
+	margin-right: 13px;
+	position: relative;
+	width: 0px;
+	height: 43px;
+	line-height: 1.5;
+	padding-right: 45px;
+	border-radius: 5px;
+	top: 0;
+	transition: all 0.5s;
+}
 
+.user-nav__wrap.user-nav--active {
+	width: 250px;
+	padding-left: 25px;
+	transition: all 0.5s;
+	background: #FFF2ED;
+	box-shadow: 0 0 0 2px rgba(255, 104, 56, 0.7);
+	border-radius: 5px;
+	background-color: #FF7A501A;
+	text-indent: -9999px
+}
 
+.user-nav__input {
+	border: none;
+	background: transparent;
+	width: 0%;
+	font-size: 16px;
+	color: greenyellow;
+	transition: all 0.3s;
+	position: relative;
+	display: block;
+	top: 10px;
+}
+
+.user-nav__input.user-nav--active {
+	width: 98%;
+	padding-left: 5px;
+	transition: all 0.5s 0.8s;
+}
+
+.user-nav__search {
+	position: absolute;
+	right: 21px;
+	top: 6px;
+	font-size: 16px;
+	cursor: pointer;
+}
+
+.user-nav__link {
+	position: relative;
+	padding: 12px;
+	bottom: 2px;
+	right: 4px;
+	border-radius: 5px;
+	transition: all 0.5s;
+}
+
+.header-mobile__logo {
+	display: block;
+	margin-right: auto;
+}
+
+.header-mobile__menu {
+	display: block;
+	margin-right: 30px;
+}
+
+.header-mobile__leng {
+	display: block;
+	font-size: 16px;
+		font-family: 'NeueMachina';
+		font-weight: 300;
+}
+
+	.header-mobile__content {
+		display: flex;
+		justify-content: space-between;
+		padding-top: 30px;
+		align-items: center;
+	}
 
 @media (min-width: 1220px) {
 
-	.header button {}
-
 	.header__button-onof,
 	.header__nav,
-	.header__themes,
-	.header__bottom {
+	.header__themes_media_desk,
+	.header__bottom,
+	.header-mobile {
 		display: none;
 	}
 
@@ -124,9 +220,11 @@
 		margin: 30px auto;
 	}
 
+
 	.header__user-wrap {
 		display: flex;
 		gap: 34px;
+		margin-bottom: 0;
 	}
 
 	.header__button-learn {
@@ -181,14 +279,15 @@
 
 	.header__logo {
 		display: inline;
-margin-left: auto;
-
+		margin-left: auto;
 	}
 
 	.header__user-nav {
 		display: flex;
 		gap: 30px;
 		align-items: center;
+		margin-left: auto;
+		margin-right: 30px;
 	}
 
 	.header__button-acc {
@@ -246,6 +345,11 @@ margin-left: auto;
 	.header__menu-wrap {
 		max-width: 1280px;
 		width: 100%;
+	}
+
+	.header__menu-wrap {
+
+		margin-bottom: 0;
 	}
 
 }
