education sectin js fix

--- a/source/styles/components/education-2/education-2.css
+++ b/source/styles/components/education-2/education-2.css
@@ -168,7 +168,20 @@
 		min-height: 218px;
 	}
 
+.filter__inner {
+	display: flex;
+	justify-content: space-around;
+}
 
+.filter__top-inner {
+	max-width: 611px;
+	width: 100%;
+}
+
+.filter__level-inner {
+		max-width: 611px;
+		width: 100%;
+}
 
 
 }
