--- a/source/styles/index.css
+++ b/source/styles/index.css
@@ -19,6 +19,8 @@
 @import "components/quote.css";
 @import "components/text.css";
 @import "components/title.css";
+@import "components/header-nav.css";
+
 
 
 @import "components/header/header.css";
