--- a/source/styles/index.css
+++ b/source/styles/index.css
@@ -21,6 +21,8 @@
 @import "components/title.css";
 @import "components/header-nav.css";
 
+@import "components/search.css";
+
 
 
 @import "components/header/header.css";
