--- a/source/styles/components/header/header.css
+++ b/source/styles/components/header/header.css
@@ -276,9 +276,7 @@
 		display: inline-block;
 	}
 
-	.header__button-deck:hover {
 
-	}
 
 	.header__logo {
 		display: inline;
@@ -291,6 +289,7 @@
 		align-items: center;
 		margin-left: auto;
 		margin-right: 30px;
+		position: relative;
 	}
 
 	.header__button-acc {
