--- a/source/styles/components/header-nav.css
+++ b/source/styles/components/header-nav.css
@@ -1,3 +1,12 @@
+
+.header-nav__menu {
+	display: none;
+}
+
+
+
+@media (min-width: 1200px) {
+
 .header__user-wrap {
 	position: relative;
 }
@@ -217,3 +226,4 @@ display: grid;
 }
 
 
+}
