--- a/source/styles/index.css
+++ b/source/styles/index.css
@@ -25,6 +25,8 @@
 @import "components/visually-hidden.css";
 @import "components/search.css";
 @import "components/header-mobile.css";
+@import "components/mobile-menu.css";
+
 
 
 
