--- a/source/styles/components/mobile-menu.css
+++ b/source/styles/components/mobile-menu.css
@@ -133,7 +133,9 @@
 	border: 2px solid #8F93A4;
 	border-radius: 50px;
 	position: relative;
-	left: 33px;
+	left: 50%;
+	transform: translateX(-50%);
+	padding: 5px 20px;
 	top: 4px;
 }
 
@@ -153,7 +155,9 @@ right: 10px;
 
 @media (min-width: 1200px) {
 	.mobile-menu,
-	.form {
+	.form,
+	.form__input,
+	.form__button {
 		display: none;
 	}
 }
