--- a/source/styles/components/mobile-menu.css
+++ b/source/styles/components/mobile-menu.css
@@ -88,9 +88,7 @@
 	right: 20px;
 }
 
-
 .mobile-menu__nav-lang {
-
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
 	grid-template-rows: repeat(8, 1fr);
@@ -106,9 +104,6 @@
 .mobile-menu__link {
 	color: #8F93A4;
 }
-
-
-
 
 .form {
 	position: absolute;
@@ -127,7 +122,7 @@
 	outline: none;
 	color: white;
 	width: 318px;
-	height: 40px;
+	height: 35px;
 	background: none;
 	outline: none;
 	border: 2px solid #8F93A4;
@@ -140,20 +135,14 @@
 }
 
 .form__button {
-position: relative;
-top: 10px;
-right: 10px;
+	position: relative;
+	top: 7px;
+	right: 0;
 }
 
 
-
-
-
-
-
-
-
 @media (min-width: 1200px) {
+
 	.mobile-menu,
 	.form,
 	.form__input,
