--- a/source/styles/components/header/header.css
+++ b/source/styles/components/header/header.css
@@ -17,9 +17,9 @@
 }
 
 .header__menu-wrap {
-	max-width: 350px;
+padding: 10px 25px;
 	margin: 0 auto;
-	margin-bottom: 210px;
+
 }
 
 .header__user-wrap {
@@ -112,6 +112,9 @@
 	flex-direction: column;
 	gap: 5px;
 	align-items: center;
+	background-color: transparent;
+	border: none;
+	padding: 0;
 }
 
 .user-nav__wrap {
