--- a/source/styles/components/glossary/glossary.css
+++ b/source/styles/components/glossary/glossary.css
@@ -1,1 +1,48 @@
 
+
+.glossary {
+padding: 40px 16px;
+text-align: left;
+}
+
+.glossary__top {
+	max-width: 328px;
+	text-align: left;
+	padding-left: 52px;
+	position: relative;
+	margin-bottom: 30px;
+	opacity: 0.8;
+}
+
+.glossary__top::before {
+	content: " ";
+	background-position: center center;
+	background-repeat: no-repeat;
+	height: 30px;
+	position: absolute;
+	width: 30px;
+	top: 50%;
+	left: 0;
+	transform: translateY(-50%);
+	background-image: url('../images/content/arov-mob.png');
+	border-radius: 50%;
+}
+
+.glossary_title {
+	font-size: 30px;
+	margin-bottom: 18px;
+
+}
+
+.glossary__nav {
+background-color: #31344C;
+	position: relative;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		max-width: 100%;
+}
+
+.glossary__alphabet {
+	display: flex;
+}
