glossary styles alphabet fix

--- a/source/styles/components/glossary/glossary.css
+++ b/source/styles/components/glossary/glossary.css
@@ -1,7 +1,6 @@
 
 
 .glossary {
-padding: 40px 16px;
 text-align: left;
 }
 
@@ -31,18 +30,52 @@ text-align: left;
 .glossary_title {
 	font-size: 30px;
 	margin-bottom: 18px;
-
 }
 
 .glossary__nav {
 background-color: #31344C;
-	position: relative;
-		bottom: 0;
-		left: 0;
-		right: 0;
-		max-width: 100%;
+width: 100vw;
+margin-left: calc(50% - 50vw);
+display: flex;
+flex-direction: column;
+gap: 3px;
+position: relative;
+padding: 16px 27px;
+gap: 15px;
+}
+
+.glossary__search {
+	display: inline-flex;
+	max-width: 100%;
+	justify-content: space-between;
+}
+
+.glossary__input {
+	all: unset;
+	padding: 12px 100px 12px 26px;
+	border: 1px solid #8F93A4;
+	backdrop-filter: blur(4px);
+	border-radius: 20px;
+
+}
+
+.glossary__form-button {
+	position: absolute;
+top: 10%;
+right: 20%;
 }
 
 .glossary__alphabet {
+
 	display: flex;
+	flex-wrap: wrap;
+	gap: 22px;
+		max-width: 310px;
+		margin: 0 auto;
+}
+
+.glossary__alphabet-link {
+	all: unset;
+	color: rgba(143, 147, 164, 1);
+
 }
